<resources>
	<string name="app_name">AndHackerNews</string>
	<string name="label_about">About</string>
	<string name="label_settings">Settings</string>
	<string name="label_score">Score</string>
	<string name="label_share">Share</string>
	<string name="label_comments">Comments</string>
	<string name="check_out_the_comments">Check out the comments</string>
	<string name="logo">logo</string>
	<string name="about_screen_developed_by_text">Developed by Kevoroid!</string>
	<string name="about_screen_privacy_policy_text">Privacy policy:</string>
	<string name="about_screen_privacy_policy_link">https://kevoroid.github.io/privacy.html</string>
	<string name="three_stars_separator">* * *</string>
	<string name="about_screen_my_other_apps">My other apps:</string>
	<string name="needmask_text">NeedMask ~ Air quality checker!</string>
	<string name="slashdroid_text">SlashDroid ~ Slashdot reader!</string>
	<string name="needmask_play_store_link">https://play.google.com/store/apps/details?id=com.kevoroid.needmask</string>
	<string name="slashdroid_play_store_link">https://play.google.com/store/apps/details?id=com.kevoroid.slashdroid</string>
	<string name="msg_err_we_have_a_problem">OOPS! Houston, We have a problem!</string>
	<string name="label_switch_dark_mode">Switch Dark Mode</string>
	<string name="msg_no_comment">no comment!</string>
</resources>
