<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

<!--	<include layout="@layout/toolbar"/>-->

	<ImageView
		android:id="@+id/about_activity_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:contentDescription="@string/logo"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@mipmap/ic_launcher"/>

	<TextView
		android:id="@+id/about_activity_main_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/app_name"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/about_activity_logo"
		app:layout_constraintTop_toTopOf="@+id/about_activity_logo"/>

	<TextView
		android:id="@+id/about_activity_subtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/about_screen_developed_by_text"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="@+id/about_activity_main_title"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_main_title"/>

	<TextView
		android:id="@+id/about_activity_privacy_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/about_screen_privacy_policy_text"
		app:layout_constraintStart_toStartOf="@+id/about_activity_logo"
		app:layout_constraintTop_toBottomOf="@+id/view"/>

	<TextView
		android:id="@+id/about_activity_privacy_link"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:autoLink="web"
		android:textColorLink="@color/holo_blue_dark"
		android:text="@string/about_screen_privacy_policy_link"
		app:layout_constraintStart_toStartOf="@+id/about_activity_privacy_title"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_privacy_title"/>

	<TextView
		android:id="@+id/about_activity_dots_separator"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/three_stars_separator"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_privacy_link"/>

	<TextView
		android:id="@+id/about_activity_other_links"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/about_screen_my_other_apps"
		android:textStyle="bold"
		app:layout_constraintStart_toStartOf="@+id/about_activity_privacy_link"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_dots_separator"/>

	<TextView
		android:id="@+id/about_activity_andhackernews_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/slashdroid_text"
		app:layout_constraintStart_toStartOf="@+id/about_activity_privacy_link"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_other_links"/>

	<TextView
		android:id="@+id/about_activity_andhackernews_link"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:autoLink="web"
		android:textColorLink="@color/holo_blue_dark"
		android:text="@string/slashdroid_play_store_link"
		app:layout_constraintStart_toStartOf="@+id/about_activity_privacy_link"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_andhackernews_text"/>

	<TextView
		android:id="@+id/about_activity_needmask_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/needmask_text"
		app:layout_constraintStart_toStartOf="@+id/about_activity_privacy_link"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_andhackernews_link"/>

	<TextView
		android:id="@+id/about_activity_needmask_link"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:autoLink="web"
		android:textColorLink="@color/holo_blue_dark"
		android:text="@string/needmask_play_store_link"
		app:layout_constraintStart_toStartOf="@+id/about_activity_privacy_link"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_needmask_text"/>

	<View
		android:id="@+id/view"
		android:layout_width="match_parent"
		android:layout_height="0.5dp"
		android:layout_marginEnd="24dp"
		android:layout_marginLeft="24dp"
		android:layout_marginRight="24dp"
		android:layout_marginStart="24dp"
		android:layout_marginTop="16dp"
		android:background="@color/colorPrimary"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/about_activity_logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>